@@ -28,6 +28,8 @@ v2.0.0:
  - gui: the GUI will now properly handle render window being resized
  - gui: added support for nested manually-rendered objects (scroll frame inside scroll frame)
  - gui: all UI objects are now managed with explicit single ownership (unique_ptr)
+ - gui: renderer is now always a frame rather than a uiobject
+ - gui: from now only frames can be flagged as manually rendered
  - gui: migrated most usage of std::(multi)map to sorted std::vector for performance
  - xml: now parsing standard XML comments
 
